src/app/globals.css
@import "tailwindcss";

:root {
  --background: #ffffff;
  --foreground: #171717;
}

@theme inline {
  --color-background: var(--background);
  --color-foreground: var(--foreground);
  --font-sans: var(--font-geist-sans);
  --font-mono: var(--font-geist-mono);
}

.clip-path-wedge {
  clip-path: polygon(50% 50%, 100% 0, 100% 19.5%);
}

.dark:root {
  --background: #0a0a0a;
  --foreground: #ededed;
}

::-webkit-scrollbar {
  width: 12px;
  height: 12px;
}

::-webkit-scrollbar-track {
  background: #1e293b;
  border-radius: 10px;
}

::-webkit-scrollbar-thumb {
  background-color: #475569;
  border-radius: 10px;
  border: 3px solid #1e293b;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #38bdf8;
}

body {
  background: var(--background);
  color: var(--foreground);
  font-family: Arial, Helvetica, sans-serif;
}

